--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "myEntertainment",
     "version": "1.0",
-    "description": "keeps track of what you read or watch online, all without lifting a finger",
+    "description": "keep track of what you read or watch online, all without lifting a finger",
     "author": "Lex Pan",
     "manifest_version": 3,
     "icons": {
