added cors, changed get response to readable format, created update url command

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,8 @@
         "128": "extension.png"
     },
     "permissions": [
-        "tabs"
+        "tabs",
+        "https://chapmanganato.to/*/*"
     ],
     "action": {
         "default_popup": "index.html"
