finished about page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "sakura-js": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
+    "gulp": "^5.0.0",
     "typescript": "^5"
   }
 }
